# shapr

./: .Rbuildignore  .Rprofile  .covrignore  .gitignore  .lintr  404.html  AGENTS.html  AGENTS.md  AICc.cpp  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  CRAN-RELEASE  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  README_py.html  _pkgdown.yml  asymmetric_causal.html  authors.html  authors.md  conclusions_AICc_Gauss_10dim_experimentations.txt  constrained_problem_test.RData  copilot-instructions.html  copilot-instructions.md  cran-comments.md  explanation.rds  general_usage.html  index.html  index.md  llms.txt  logfile  (+16 more)
.circleci/: config.yml
.github/: CONTRIBUTING.md  copilot-instructions.md
R/: AICc.R  Compare_Gaussian.R  PySHAP.R  RcppExports.R  approach.R  approach_arf.R  approach_categorical.R  approach_copula.R  approach_ctree.R  approach_empirical.R  approach_gaussian.R  approach_independence.R  approach_regression_ppr.R  approach_regression_separate.R  approach_regression_surrogate.R  approach_regression_surrogate_NN.R  approach_timeseries.R  approach_vaeac.R  approach_vaeac_check_functions.R  approach_vaeac_extra_functions.R  approach_vaeac_torch_modules.R  asymmetric_and_casual_Shapley.R  asymmetric_and_causal_Shapley.R  causal_Shapley_values.R  check_convergence.R  check_prediction.R  check_setup.R  cli.R  clustering.R  compute_estimates.R  compute_vS.R  devel_scaling.R  documentation.R  explain.R  explain_forecast.R  explain_linear.R  explain_lingauss.R  explanation.R  extra.R  feature_reduction.R  (+50 more)
articles/: asymmetric_causal.html  asymmetric_causal.md  general_usage.html  general_usage.md  index.html  index.md  regression.html  regression.md  understanding_shapr.html  understanding_shapr_asymmetric_causal.html  understanding_shapr_regression.html  understanding_shapr_vaeac.html  vaeac.html  vaeac.md
dev/: check-pr  pr-workflow.md  prepare-pr  publish-pr  rebuild-long-running-vignettes.R  snapshot-diff.R
inst/: CITATION  FIGURES_real_data_experiment.R  INVESTIGATE_HIGH_REAL_PREDS.R  NOTE_FOR_THIS_PR_TO_BE_DELETED.txt  REAL_DATA_EXPERIMENT_compare_cond_dists.R  REAL_DATA_EXPERIMENT_compare_cond_dists_empirical.R  REAL_DATA_EXPERIMENT_high_prob_compare_cond_dists.R  REAL_DATA_EXPERIMENT_high_prob_compare_cond_dists_direct_subsets.R  REAL_DATA_EXPERIMENT_plot_br_max_end_vs_other_conditionals.R  REAL_DATA_EXPERIMENT_rerun_high_probs.R  REAL_DATA_EXPERIMENT_rerun_high_probs_just_some_gaussian.R  REAL_DATA_EXPERIMENT_rerun_some_individuals.R  REAL_DATA_EXPERIMENT_rerun_some_individuals_2.R  REAL_DATA_EXPERIMENT_rerun_some_random.R  REAL_DATA_EXPERIMENT_rerun_some_random_bonus.R  REAL_DATA_EXPERIMENT_rerun_specific_br_max.R  REAL_DATA_EXPERIMENT_restructure_high_prob_rerun.R  REAL_DATA_EXPERIMENT_restructure_high_prob_rerun_2.R  REAL_DATA_EXPERIMENT_some_random_compare_cond_dists.R  REFERENCES.bib  TODO_NYTT_FORSØK.R  bench_arf.R  devel_arf.R  experimental_script.R  explain_manual.R  explain_manual_script.R  explain_manual_script2.R  explain_manual_source.R  groupVariables_FIGURE_PLOTTING_TO_PAPER.R  time_series_annabelle.R
man/: AICc.func.new.Rd  AICc_full_cpp_alt.Rd  AICc_full_tmp_cpp.Rd  CategoricalToOneHotLayer.Rd  GaussCatLoss.Rd  GaussCatParameters.Rd  GaussCatSampler.Rd  GaussCatSamplerMostLikely.Rd  GaussCatSamplerRandom.Rd  Gauss_trans_func.Rd  Gauss_trans_func_seperate.Rd  H.func.Rd  H.func.new.Rd  H_cpp.Rd  K.func.Mahalanobis.all.Rd  MCAR_mask_generator.Rd  MemoryLayer.Rd  SkipConnection.Rd  Specified_masks_mask_generator.Rd  Specified_prob_mask_generator.Rd  Specified_probability_mask_generator.Rd  VAEAC.Rd  VAEAC_dataset.Rd  VAEAC_impute_values.Rd  VAEAC_postprocess_data.Rd  (+348 more)
python/: .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  eksempel_lm.py  install_r_packages.R  plot.py  pyproject.toml  pytest.ini  requirements.txt  sandkasse.ipynb  setup.py  test_custom_model_standalone.py
python-shim/: README.md  pyproject.toml
python-shim/src/shaprpy/: __init__.py
python-shim/src/shaprpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/examples/: arf_vaeac_mixed_features.py  class_exploration.py  devel_new_explain.py  devel_new_explain_2.py  keras_classifier.py  plotting.py  pytorch_custom.py  regression_paradigm.py  sklearn_classifier.py  sklearn_regressor.py  tmp_test.py  xgboost_booster.py  xgboost_regressor.py
python/examples/code_paper/: code_sec_5.py
python/setup_shapr/: example_shapr.py  install_shapr.R
python/shaprpy/: __init__.py  explain.py  explain_old.py  plot.py  testing.py  utils.py
python/src/pyshapr/: __init__.py  _explain.py  explanation.py  utils.py
python/src/shaprpy/: __init__.py  _explain.py  _rutils.py  datasets.py  explanation.py  plot.py  utils.py
python/tests/: .gitignore  README.md  conftest.py  test_output.py  test_setup.py  test_simple_r_connection.py
python/tests/integration/: test_classification_snapshots.py  test_regression_snapshots.py
python/tests/integration/__snapshots__/: test_regression_snapshots.ambr
python/tests/output/: test_asymmetric_causal_outputs.py  test_categorical_outputs.py  test_classification_outputs.py  test_regression_outputs.py  test_regression_outputs.py.disabled  test_sage_outputs.py
python/tests/output/__snapshots__/: test_asymmetric_causal_outputs.ambr  test_categorical_outputs.ambr  test_classification_outputs.ambr  test_regression_outputs.ambr  test_sage_outputs.ambr
python/tests/setup/: test_input_validation.py  test_sage_validation.py  test_shapr_class.py
python/tests/setup/__snapshots__/: test_shapr_class.ambr
python/tests/snapshots/: snap_test_output.py
python/tests/snapshots/test_output/test_output_lm_empirical/: test_output_lm_empirical_est  test_output_lm_empirical_sd
python/tests/snapshots/test_output/test_output_sage_xgb_gaussian/: test_output_sage_xgb_gaussian_est  test_output_sage_xgb_gaussian_sd
python/tests/snapshots/test_output/test_output_xgb_gaussian/: test_output_xgb_gaussian_est  test_output_xgb_gaussian_sd
(+1627 files in other folders)
