[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shaprpy"
version = "0.2.1"
description = "Python wrapper for the R package shapr (via rpy2)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Martin Jullum" },
  { name = "Lars Henry Berge Olsen" },
  { name = "Didrik Nielsen" }
]
requires-python = ">=3.8.1"
keywords = ["explainable-ai", "shapley-values", "machine-learning", "model-interpretability"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "rpy2>=3.5.1",
  "numpy>=1.22.3",
  "pandas>=1.4.2",
  "scikit-learn>=1.0.0"
]

[project.optional-dependencies]
# Note: Testing requires Python >3.8.1 for syrupy 4.x.x compatibility
test = [
  "pytest>=7.0.0",
  "syrupy>=4.0.0",
  "xgboost>=1.5.0"
]

[project.urls]
Homepage = "https://github.com/NorskRegnesentral/shapr"
Documentation = "https://norskregnesentral.github.io/shapr/shaprpy.html"
Issues = "https://github.com/NorskRegnesentral/shapr/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["shaprpy*" ]

[tool.setuptools.dynamic]
# (none needed now)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "snapshot: marks tests as snapshot tests",
]
